--- a/index.html
+++ b/index.html
@@ -1,65 +1,31 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>کارت معرفی پایه</title>
-<style>
-  body {
-    background-color:lightblue; /* رنگ پس‌زمینه روشن */
-    font-family:Tahoma,sans-serif;
-    direction:rtl;
-    margin:0 auto;
-    padding:0;
-  }
-
-  .profile-cart {
-    background-color:white;
-    width:300px; /* عرض ثابت */
-    padding:25px;
-    border:1px solid lightgray;
-    border-radius:10px;
-    box-shadow:0 2px 8px rgba(0, 0, 0,0.15); /* سایه ملایم */
-    margin-top: 80px; /* فاصله از بالای صفحه */
-    margin-right:auto; /* این دو خط کارت را در وسط صفحه افقی نگه می‌دارد */
-    margin-left:auto;
-  }
-
-  .profile-cart img {
-    width:100px;
-    height:100px;
-    border-radius:50%;
-    border:4px solid hotpink;
-    margin-bottom:15px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .profile-cart h2 {
-    color:darkblue;
-    margin: 10px 0 5px 0;
-    font-size:22px;
-    text-align:center;
-  }
-
-  .profile-cart p {
-    color:#777;/*lightgray*/
-    margin-top: 5px;
-    font-size:15px;
-    text-align:center;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>تبریک یلدا</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-
-  <div class="profile-cart">
-    <img src="photo.jpg" alt="تصویر پروفایل">
-    
-    <h2>زهرا السادات موسوی</h2>
-    <p>دانش‌آموز پرتلاش دوره مقدماتی وب</p>
-    <p>مهارت: یادگیری HTML و CSS</p>
-  </div>
+  <header>
+    <h1>شب یلدا مبارک🕛🍉</h1>
+    <p>بلندترین شب سال، فرصتی برای عشق و لبخند</p>
+  </header>
+  <nav>
+    <a href="#">صفحه اصلی</a>
+    <a href="#">درباره یلدا</a>
+    <a href="#">تماس با ما</a>
+  </nav>
+  <main>
+    <div class="card">
+      <h2>هنرجویان هنرستان تهذیب<h2>
+      <img src="watermelon.jpg" alt="هندوانه یلدا">
+      <p>یلدا یعنی یادها تازه، دل‌ها گرم و لب‌ها خندان ❤️</p>
+      <img src="pomegranate.jpg" alt="انار یلدا">
+    </div>
+  </main>
+  <footer>
+    <p>کپی‌رایت © ۱۴۰۴ هنرستان تهذیب | شب یلدا</p>
+  </footer>
 
 </body>
 </html>
